--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-image-zoom": "^1.3.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-zoom-pan-pinch": "^3.4.4",
     "redux": "^5.0.1",
+    "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
